Fix custom donation amount alignment

--- a/site/css/donate.scss
+++ b/site/css/donate.scss
@@ -91,6 +91,7 @@
 
     .donation-custom-amount {
         display: flex;
+        align-items: center;
         padding: 8px 16px;
         border: 1px solid $blue-20;
         @include body-3-medium;
